# goopho

./: .gitignore  Cargo.toml  Cross.toml  README.md  cargo_runlog.sh
images/: caret.ppm
migrations/: 0001_initial.sql
refimpl/: index_images.py  index_images.sh  refimpl.py  requirements.in  requirements.txt  search.py  search.sh
refimpl/pyimagesearch/: hashing.py
refimpl/shell/: caltech-101-download.sh  caltech-101-unpack.sh
src/: acc.rs  calculations.rs  config.rs  download.rs  fsvisitor.rs  hub.rs  lib.rs  limited_dl.rs  main.rs  persistence.rs
src/persistence/: mod.rs  sqlite.rs
