[package]
name = "goopho"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
opt-level = "z"

[dependencies]
anyhow = "1.0.75"
argh = "0.1.12"
console-subscriber = "0.2.0"
directories = "5.0.1"
futures = "0.3.29"
google-photoslibrary1 = "*"
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["fs", "macros", "rt-multi-thread", "tracing"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
